Bug 402934 - Latte dock autostart doesn't work
Summary: Latte dock autostart doesn't work
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-06 17:11 UTC by Tomsk
Modified: 2019-01-06 19:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomsk 2019-01-06 17:11:48 UTC
I just installed latte-dock from repo, I use KDE Neon and autostart doesn't work.



I went into Preferences and checked Enable autostart during startup and clicked on OK, and when I clicked on OK, then that checkbox changed state to unchecked and didn't save it.
Comment 1 Michail Vourlakos 2019-01-06 18:04:47 UTC
1. what is your latte version?

2.that option copies the latte desktop file into your directory:

"~/.config/autostart"

if you enable that option and click apply, isnt a file called:

"org.kde.latte-dock.desktop"

placed in that directory?
Comment 2 Michail Vourlakos 2019-01-06 18:06:06 UTC
3. If you run in a terminal:

"ls /usr/share/applications/*latte*"

what is it show afterwards?
Comment 3 Tomsk 2019-01-06 18:39:28 UTC
1. My version is 0.8.4
2. Directory ~/.config/autostart-scripts/ is empty after clicking ok
3. Output is:
/usr/share/applications/org.kde.latte-dock.desktop
Comment 4 Michail Vourlakos 2019-01-06 18:43:10 UTC
(In reply to Tomsk from comment #3)
> 1. My version is 0.8.4
> 2. Directory ~/.config/autostart-scripts/ is empty after clicking ok
> 3. Output is:
> /usr/share/applications/org.kde.latte-dock.desktop

But I didnt ask about "autostart-scripts" I asked about "autostart". Dont you have an "~/.config/autostart" folder?
Comment 5 Tomsk 2019-01-06 18:44:56 UTC
No, ~/.config/autostart folder is missing.
Comment 6 Michail Vourlakos 2019-01-06 18:55:58 UTC
Git commit 8c21ca90721499f5db8b7d8e0c836b0b40e41ffe by Michail Vourlakos.
Committed on 06/01/2019 at 18:54.
Pushed by mvourlakos into branch 'master'.

create local autostart folder if is missing

M  +7    -0    app/settings/universalsettings.cpp

https://commits.kde.org/latte-dock/8c21ca90721499f5db8b7d8e0c836b0b40e41ffe
Comment 7 Michail Vourlakos 2019-01-06 18:57:03 UTC
Git commit 630160c6afb58887bc1ca17eef6aebdeea24f43b by Michail Vourlakos.
Committed on 06/01/2019 at 18:56.
Pushed by mvourlakos into branch 'v0.8'.

create local autostart folder if is missing
FIXED-IN: 0.8.5

M  +7    -0    app/universalsettings.cpp

https://commits.kde.org/latte-dock/630160c6afb58887bc1ca17eef6aebdeea24f43b
Comment 8 Michail Vourlakos 2019-01-06 18:58:44 UTC
(In reply to Tomsk from comment #5)
> No, ~/.config/autostart folder is missing.

ok, because you dont have the autostart folder Latte couldnt update autostart in your system. You can wait for 0.8.5 or you can manually do it:

1. Create folder "~/.config/autostart"
2. Copy file "usr/share/applications/org.kde.latte-dock.desktop" into the previous folder you created at [1]

that is all you need to do
Comment 9 Tomsk 2019-01-06 19:43:37 UTC
Oh that was fast hotfix, thank you very much! :)