create local autostart folder if is missing

BUG: 402934